--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -155,3 +155,18 @@ test:
         read:
           mode: :primary
         max_pool_size: 1
+  options:
+    raise_not_found_error: false
+
+production:
+    clients:
+      default:
+        database: bytely
+        hosts:
+          - localhost:27017
+        options:
+          read:
+            mode: :primary
+          max_pool_size: 1
+    options:
+      raise_not_found_error: false
